ec2.tf
resource "aws_instance" "bastion_host" {
  ami           = "ami-079cd5448deeace01"
  instance_type = "t2.micro"
  subnet_id     = module.vpc.public_subnets[0]
  key_name      = "${local.app}-ec2-key"

  iam_instance_profile = aws_iam_instance_profile.bastion_profile.name

  vpc_security_group_ids = [aws_security_group.bastion_sg.id]

  tags = {
    Name = "BastionHost"
  }
}

resource "aws_eip" "bastion_host" {
  instance = aws_instance.bastion_host.id
}
