rds.tf
# data "aws_ssm_parameter" "rds_password" {
#   name = "/${local.app}/rds/password"
# }

# resource "aws_db_instance" "my_db_instance" {
#   db_subnet_group_name = aws_db_subnet_group.my_db_subnet_group.name
#   allocated_storage    = 20
#   storage_type         = "gp2"
#   engine               = "mysql"
#   engine_version       = "5.7"
#   instance_class       = "db.t2.micro"
#   db_name              = "mydb"
#   username             = "admin"
#   password             = data.aws_ssm_parameter.rds_password.value
#   parameter_group_name = "default.mysql5.7"
#   skip_final_snapshot  = true

#   vpc_security_group_ids = [aws_security_group.rds.id]

#   tags = {
#     Name = "${local.app} RDS Instance"
#   }
# }
